--- a/mainStyle.css
+++ b/mainStyle.css
@@ -76,9 +76,33 @@ a.addRes {
     padding: 14px 30px;
     text-decoration: none;
 }
+.dropBtn {
+    background-color: #676767;
+    border: none;  
+}
+.dropDown{
+    position: relative;
+    display: inline-block;
+}
+.dropdown_content {
+    display: none;
+    position: absolute;
+    background-color: #676767;
+    min-width: 160px;
+    z-index: 1;
+}
+.dropBtn:hover .dropdown_content {
+    display: block;
+}
 form.searchBox {
-    float: right;
-    padding: 10px 30px;
+    display: flex;
+    justify-content: right;
+    text-align: center;
+    padding: 10px 10px;
+    width: 75%;
+    margin: 0 auto;
+    display: block;
+    
 }
 button#searchButton { 
     color: #003B6D;
@@ -146,7 +170,7 @@ h1.contactUs {
     margin: 0 auto;
     padding-top: 1%;
 }
-h2 {
+h2.catH2 {
     text-align: center;
     font-size: 26px;
     font-weight: bold;
