--- a/mainStyle.css
+++ b/mainStyle.css
@@ -56,15 +56,102 @@ h2 {
     font-weight: bold;
     
 }
-a {
-    color: #6699CC;
+ ul.primary, ul.Submenu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+nav {
+    background: #676767;
+    position: relative;
+    padding: 0px 20px;
+}
+.Formsearch {
+   position: absolute;
+   top: 50%;
+   transform: translateY(-50%);
+   right: 5%;
+   margin-right: 20px;
+   padding: 10px;
+   border-radius: 5px;
+}
+.buttonSearch{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+   color: #003B6D;
+   border-radius: 4px;
+}
+nav.topNav ul li a {
     text-decoration: none;
+    color: #6699CC;
+    display: block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 30px;
+}
+a {
+    text-decoration: none;
+    color: #6699CC;
+}
+ul.primary li, ul.Submenu li {
+    float: left;
+    font-size: 15px;
+}
+
+ul:after{
+    clear: both;
+}
+ul:before, ul:after {
+    content: " ";
+    display: table;
+}
+ul.primary li a:hover{
+    color: #003b6d;
+}
+ul.Submenu{
+    position:absolute;
+    z-index: 200;
+    /* box-shadow: 2px 2px 2px 0 #BEBEBE; */
+    width: 20%;
+    display: none;
+}
+ul.Submenu li a{
+    /* border-top:1px solid #fff; */
+    border-right: none;
+    padding: 15px 30px;
+
+}
+ul.primary li:last-child a{
+    border-bottom:none;
+} 
+ ul.primary li:hover ul {
+    display: block;
+}
+ul.primary li:hover a {
+    background:#6699CC;
+    color: #003B6D;
+    text-shadow: none;
+
+}
+ul.primary li a.active {
+    background: #6699CC;
+    color: #003B6D;
+}
+ul.primary li:hover > a {
+    color: #003B6D;
+}
+ul.Submenu li a:hover {
+    color: #003B6D;
+    background: #676767;
 }
 a.addRes {
     color: #6699CC;
     text-decoration: underline;
 }
-.topNav {
+/* .topNav {
     overflow: hidden;
     background-color: #676767;
 }
@@ -75,26 +162,9 @@ a.addRes {
     text-align: center;
     padding: 14px 30px;
     text-decoration: none;
-}
-.dropBtn {
-    background-color: #676767;
-    border: none;  
-}
-.dropDown{
-    position: relative;
-    display: inline-block;
-}
-.dropdown_content {
-    display: none;
-    position: absolute;
-    background-color: #676767;
-    min-width: 160px;
-    z-index: 1;
-}
-.dropBtn:hover .dropdown_content {
-    display: block;
-}
-form.searchBox {
+} */
+
+/* form.searchBox {
     display: flex;
     justify-content: right;
     text-align: center;
@@ -125,7 +195,7 @@ label[name=searchTextBox]{
 .topNav a.active {
     background-color: #6699CC;
     color: #003B6D;
-}
+} */
 
 img.rotatingImage {
     float: left;
@@ -282,4 +352,5 @@ div.copyRight {
     font-size: 15px;
     
 }
+
 
